<resources>
    <string name="app_name">Setting</string>
    <string name="app_name1">Setting</string>
    <string name="source_navi">Navigation</string>
    <string name="set_general">General</string>
    <string name="set_datetime">Date Time</string>
    <string name="set_wallpaper">Wallpaper</string>
    <string name="set_navigation">Navigation</string>
    <string name="set_video">Video</string>
    <string name="set_swc">SWC</string>
    <string name="set_factory">Factory Set</string>
    <string name="set_sound_effect">Sound Effect</string>
    <string name="set_calibration">Calibration</string>
    <string name="set_radio_frequency">Radio Area</string>
    <string name="set_bt">Bluetooth</string>
    <string name="set_gps_info">Gps info</string>
    <string name="set_carcorder">DVR</string>
    <string name="set_wifi">Wi-Fi</string>
    <string name="wifi_ssid">SSID:</string>
    <string name="wifi_enc">ENC:</string>
    <string name="wifi_password">Password:</string>
    <string name="wifi_connect">Connect</string>
    <string name="wifi_forget">Forget</string>
    <string name="wifi_WLAN_Unprotected">WLAN Unprotected</string>
    <string name="wifi_WLAN_UNKNOWN">WLAN UNKNOWN</string>
    <string name="wifi_WPA_Usable">(WPS Usable)</string>
    <string name="wifi_UNABLECONNECT">unable connect</string>
    <string name="wifi_state_SCANNING">scanning...</string>
    <string name="wifi_state_AUTHENTICATING">authenticating...</string>
    <string name="wifi_state_OBTAINING_IPADDR">obtaining ip address...</string>
    <string name="wifi_state_CONNECTING">connecting...</string>
    <string name="wifi_state_CONNECTED">connected</string>
    <string name="wifi_state_DISCONNECTING">disconnecting...</string>
    <string name="wifi_state_DISCONNECTED">disconnected</string>
    <string name="set_language">Language</string>
    <string name="set_buzzer">Beep</string>
    <string name="set_lighting_detect">Light Detect</string>
    <string name="set_screensaver">ScreenSaver</string>
    <string name="set_reset">Reset</string>
    <string name="set_about">About</string>
    <string name="set_assistive_touch">AssistiveTouch</string>
    <string name="set_voice_button">Show voice button</string>
    <string name="set_wakeup_button">Voice wakeup</string>
    <string name="set_qicaideng_button">Qicaideng</string>
    <string name="set_datetime_clock">Clock</string>
    <string name="set_datetime_24hours">24-hour time</string>
    <string name="set_datetime_gps_syc">Gps syc time</string>
    <string name="set_datetime_zone">TimeZone</string>
    <string name="set_bt_device">Device name</string>
    <string name="set_bt_pair">Pair code</string>
    <string name="set_bt_auto_connect">Auto connect</string>
    <string name="set_bt_auto_answer">Auto answer</string>
    <string name="set_nav_maps_select">Default map</string>
    <string name="set_nav_maps_prompt">Please install maps apk!</string>
    <string name="set_nav_volume_gis">Volume gis</string>
    <string name="set_nav_volume_backcar">Volume backcar</string>
    <string name="set_nav_volume_bt">Volume bt</string>
    <string name="set_nav_volume_media_front">Volume front media</string>
    <string name="set_nav_volume_media_back">Volume rear</string>
    <string name="set_nav_gps_test">Gps info</string>
    <string name="set_nav_maps_list_decription">Map list</string>
    <string name="set_nav_maps_list">Select map</string>
    <string name="set_nav_volume_remix">Volume Remix</string>
    <string name="set_nav_volume_listen">Volume Listen</string>
    <string name="set_backcar_mirror">Rear Camera Mirror</string>
    <string name="set_parking">Parking</string>
    <string name="set_screen_bright">Bright</string>
    <string name="set_screen_contast">Contrast</string>
    <string name="set_screen_hue">Hue</string>
    <string name="set_screen_saturation">Saturation</string>
    <string name="set_screen_colorful">Colorful</string>
    <string name="set_screen_soft">Soft</string>
    <string name="set_screen_reset">Reset</string>
    <string name="set_backlight">Backlight</string>
    <string name="general_backcar_record">BackCar video record</string>
    <string name="general_key_light">Button lamp brightness</string>
    <string name="general_car_battery_protect">Battery protect</string>
    <string name="general_car_battery_protect_m">middle</string>
    <string name="general_open_sound">Power Volume</string>
    <string name="general_buzzer">Buzzer</string>
    <string name="general_cvbs">CVBS</string>
    <string name="general_headlight_detection">Headlight detection</string>
    <string name="general_parking_detection">Parking</string>
    <string name="general_language_select">Language select</string>
    <string name="general_about_car">about</string>
    <string name="general_about_model">Model： %1$s</string>
    <string name="general_about_androidVersion">APP&#160;： %1$s</string>
    <string name="general_about_kernelVersion">Kernel version： %1$s</string>
    <string name="general_about_Version">OS&#160;&#160;&#160;&#160;： %1$s</string>
    <string name="general_about_mcuVersion">MCU： %1$s</string>
    <string name="general_about_CanmcuVersion">CAN&#160;： %1$s</string>
    <string name="general_about_mcuID">mcu ID： %1$s</string>
    <string name="general_about_dvdVersion">dvd Version： %1$s</string>
    <string name="general_backlight">Backlight</string>
    <string name="general_aux_port_change">Avin change</string>
    <string name="general_aux_port_front">Front</string>
    <string name="general_aux_port_rear">Rear</string>
    <string name="general_backcar_mute">Backcar mute </string>
    <string name="factory_qicaideng">Colorful light</string>
    <string name="qicaideng_r">R</string>
    <string name="qicaideng_g">G</string>
    <string name="qicaideng_b">B</string>
    <string name="general_set_time">Time setting</string>
    <string name="general_set_timezone">Timezone setting</string>
    <string name="general_date_gps_syc">Automatically set the time</string>
    <string name="general_date_time_24">24 hour</string>
    <string name="nav_maps_select">Default navigation soft</string>
    <string name="nav_volume_gis">Navigationg volume</string>
    <string name="nav_volume_backcar">Backcar volume</string>
    <string name="nav_volume_bt">Bluetooth phone volume</string>
    <string name="nav_volume_media_front">Front media volume</string>
    <string name="nav_volume_media_back">Rear media volume</string>
    <string name="nav_gps_test">Gps test</string>
    <string name="nav_maps_list_decription">map list</string>
    <string name="nav_maps_list_title">Select Maps application</string>
    <string name="nav_volume_remix">Navi Remix</string>
    <string name="nav_volume_listen">Navi And Listen</string>
    <string name="factory_radio_area_config">Radio area config</string>
    <string name="factory_radio_area">Default Radio area</string>
    <string name="media_radio_default">China</string>
    <string name="media_tv_dvr">Switch DVR and TV</string>
    <string name="media_tv_dvr_tv">TV</string>
    <string name="media_tv_dvr_dvr">DVR</string>
    <string name="media_sound_effect">Sound effect</string>
    <string name="media_back_camera">Back camera setting</string>
    <string name="media_back_left90">Left up</string>
    <string name="media_back_right90">Right up</string>
    <string name="media_back_left180">Left down</string>
    <string name="media_back_right180">Right down</string>
    <string name="media_ban_on_video">Ban to video while driving</string>
    <string name="media_backcar_trace">BackCar trace</string>
    <string name="media_backcar_mirror">BackCar mirror</string>
    <string name="media_mirror_FLIP_NONE">normal</string>
    <string name="media_mirror_FLIP_H">left_right mirror</string>
    <string name="media_mirror_FLIP_V">up-down mirror</string>
    <string name="media_mirror_FLIP_HnV">all mirror</string>
    <string name="style_wallpaper">Wallspaper </string>
    <string name="style_wallpaper_title">Wallspaper select</string>
    <string name="style_display_setting">Display Setting</string>
    <string name="style_logo_setting">Logo Setting</string>
    <string name="style_logo_setting_bt">Setting Logo </string>
    <string name="system_shutdown_prompt">Your tablet will shut down.</string>
    <string name="system_Calibrate">Calibrate</string>
    <string name="system_Learn_steer_wheel">Learning steer wheel</string>
    <string name="system_Learn_steer_wheel_bt">Learn</string>
    <string name="system_Select_steer_wheel">Select steer wheel</string>
    <string name="system_ota_update">System update</string>
    <string name="system_ota_sd">Update from Sdcard</string>
    <string name="system_ota_udisk">Update from U disk</string>
    <string name="system_reset">System reset</string>
    <string name="system_application">System application</string>
    <string name="system_wireless_setting">Wireless setting</string>
    <string name="system_usb_model">USB model</string>
    <string name="system_usb_host">Host</string>
    <string name="system_usb_device">Device</string>
    <string name="system_usb_type">USB type</string>
    <string name="system_usb_10">USB 1.0</string>
    <string name="system_usb_20">USB 2.0</string>
    <string name="system_copyInstall_tool">Copy Install Tool</string>
    <string name="system_factory_setting">Factory setting</string>
    <string name="system_volume_adjust">Volume adjust</string>
    <string name="system_mcu_upgrade">MCU upgrade</string>
    <string name="system_factory_test">Factory Testing</string>
    <string name="system_factory_login">Factory setting login</string>
    <string name="system_factory_login_prompt">Please enter the password</string>
    <string name="system_factory_login_error_prompt">incorrect password! Please re-enter your password!</string>
    <string name="system_mcu_upgrade_error">MCU upgrade file does not exist!</string>
    <string name="system_mcu_upgrade_done">MCU upgrade is complete!</string>
    <string name="system_mcu_upgrade_file_list">MCU upgrade file list</string>
    <string name="system_mcu_upgrade_start">MCU started to upgrade</string>
    <string name="system_mcu_upgrade_doing">MCU upgrading</string>
    <string name="system_mcu_upgrade_end">MCU upgrade is complete</string>
    <string name="system_mcu_upgrade_prompt">MCU ongoing upgrade, do not perform other operations or power off!</string>
    <string name="system_mcu_description">Create a directory McuUpgrade in SDCARD1 or SDCARD2, and then copy the MCU file to the directory!</string>
    <string name="system_usb_upgrade_error">USB upgrade file does not exist!</string>
    <string name="system_factory_fun_config">Function configuration</string>
    <string name="system_factory_lcd_config">Lcd configuration</string>
    <string name="factory_navigation_set">Navigation</string>
    <string name="factory_backcar_set">BackCar</string>
    <string name="factory_radio_set">Radio</string>
    <string name="factory_bt_set">BT</string>
    <string name="factory_other_set">Other</string>
    <string name="factory_radio_type">Radio type</string>
    <string name="factory_avin_avin1_video_channel">Avin1 video channel</string>
    <string name="factory_avin_avin1_audio_channel">Avin1 audio channel</string>
    <string name="factory_avin_avin2_video_channel">Avin2 video channel</string>
    <string name="factory_avin_avin2_audio_channel">Avin2 audio channel</string>
    <string name="factory_avin_tv_video_channel">TV video channel</string>
    <string name="factory_avin_tv_audio_channel">TV audio channel</string>
    <string name="factory_avin_dvr_video_channel">DVR video channel</string>
    <string name="factory_avin_camera_video_channel">Camera video record</string>
    <string name="factory_avin_fm_audio_channel">FM audio channel</string>
    <string name="factory_avin_ipod_audio_channel">Ipod audio channel</string>
</resources>