<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:carsetting="http://schemas.android.com/apk/res/com.yecon.carsetting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:padding="@dimen/fragment_padding" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.yecon.carsetting.view.HeaderLayout
            android:id="@+id/set_datetime_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            carsetting:item_style="1"
            carsetting:item_subTitle="@string/set_datetime_clock" />

        <com.yecon.carsetting.view.HeaderLayout
            android:id="@+id/set_datetime_24hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            carsetting:item_style="2"
            carsetting:item_subTitle="@string/set_datetime_24hours" />

        <com.yecon.carsetting.view.HeaderLayout
            android:id="@+id/set_datetime_gps_syc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            carsetting:item_style="2"
            carsetting:item_subTitle="@string/set_datetime_gps_syc" />

        <com.yecon.carsetting.view.HeaderLayout
            android:id="@+id/set_datetime_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            carsetting:item_style="3"
            carsetting:item_subTitle="@string/set_datetime_zone" />

        <RelativeLayout
            android:id="@+id/set_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" >

            <DatePicker
                android:id="@+id/datepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/datepicker_bk"
                android:calendarViewShown="false"
                android:saveEnabled="true"
                android:scrollbarSize="5sp" />

            <TimePicker
                android:id="@+id/timepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_toRightOf="@+id/datepicker"
                android:background="@drawable/timepicker_bk"
                android:saveEnabled="true"
                android:scrollbarSize="5sp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>